tests/ui/never_type/fallback_change/dependency-on-fallback-to-unit.stderr
error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/dependency-on-fallback-to-unit.rs:8:19
   |
LL |         false => <_>::default(),
   |                   ^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
   = help: you might have intended to use the type `()` here instead

error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/dependency-on-fallback-to-unit.rs:17:5
   |
LL |     deserialize()?;
   |     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `deserialize`
  --> $DIR/dependency-on-fallback-to-unit.rs:22:19
   |
LL | fn deserialize<T: Default>() -> Result<T, ()> {
   |                   ^^^^^^^ required by this bound in `deserialize`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
